--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -552,6 +552,7 @@ header {
 }
 
 .content {
+	position: relative;
 
 	p, span {
 
@@ -1163,6 +1164,9 @@ header {
 	}
 
 	.index-text {
+		position: absolute;
+		left: 0;
+		width: 100%;
 		padding-top: 47px;
 
 		img.licension {
