--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -318,6 +318,7 @@ header {
 
 		&::before {
 			position: absolute;
+			z-index: 1;
 			left: -53px;
 			top: 0;
 			display: block;
@@ -332,6 +333,7 @@ header {
 
 		&::after {
 			position: absolute;
+			z-index: 1;
 			right: -53px;
 			top: 0;
 			display: block;
@@ -606,7 +608,8 @@ header {
 				}
 			}
 
-			span {
+			h2 {
+				display: inline;
 				vertical-align: middle;
 				font-size: 39px;
 				font-weight: bold;
@@ -1220,11 +1223,23 @@ header {
 
 	.reviews {
 
-		.title-block {
+		h3 {
+			position: relative;
+			padding-bottom: 8px;
+			font-size: 36px;
+			font-weight: 600;
+			color: @acf;
 			text-align: center;
 
 			&::before {
+				position: absolute;
 				left: calc(~'50% - 97px');
+				bottom: 0;
+				display: block;
+				width: 195px;
+				height: 3px;
+				background-color: @border-title;
+				content: '';
 			}
 
 			@media (min-width: 320px) and (max-width: 767px) {
@@ -1237,6 +1252,11 @@ header {
 					}
 				}
 			}
+		}
+
+		.title-block {
+			text-align: center;
+
 		}
 
 		a.all-reviews {
@@ -1658,6 +1678,35 @@ header {
 			& {
 				padding-top: 33px;
 			}
+		}
+
+		h2 {
+			position: relative;
+			padding-bottom: 8px;
+			font-size: 36px;
+			font-weight: 600;
+			color: @acf;
+			text-align: center;
+
+				@media (max-width: 767px) {
+
+					& {
+						font-size: 26px;
+						padding-bottom: 13px;
+						text-transform: uppercase;
+					}
+				}
+
+				&::before {
+					position: absolute;
+					left: calc(~'50% - 97px');
+					bottom: 0;
+					display: block;
+					width: 195px;
+					height: 3px;
+					background-color: @border-title;
+					content: '';
+				}
 		}
 
 		p {
@@ -2876,6 +2925,14 @@ header {
 
 			.item {
 				text-align: center;
+
+				img {
+					transition: all 300ms linear;
+
+					&:hover {
+						box-shadow: 0px 2px 17px 0 rgba(0, 0, 0, .25);
+					}
+				}
 			}
 		}
 
@@ -2959,6 +3016,11 @@ header {
 			background-position: left center;
 			background-repeat: no-repeat;
 			color: @acf;
+			transition: color 300ms linear;
+
+			&:hover {
+				color: @footer-a;
+			}
 
 			@media (max-width: 767px) {
 
