new block new-office index page

--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -798,6 +798,22 @@ header {
 
 	}
 
+	.new-office {
+		padding: 30px 0;
+		text-align: center;
+		background-color: @toxic;
+		font: 55px @cond;
+		color: @white;
+
+		@media (max-width: 767px) {
+			font-size: 30px;
+		}
+
+		p {
+			text-shadow: 4px 3px 4px rgba(0, 0, 0, .5);
+		}
+	}
+
 	.utp {
 		position: relative;
 		padding-top: 20px;
