--- a/src/templates/includes/reservation.jade
+++ b/src/templates/includes/reservation.jade
@@ -26,3 +26,6 @@ mixin reservation()
       +utp()
 
       +type-learn()
+
+      .new-office
+         p  Открылся новый класс в центре города на Коммунальной 18
