popup styles, and js edits

--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -283,6 +283,13 @@ header {
 			z-index: 2;
 			top: -3px;
 			width: 100%;
+			
+			@media (max-width: 767px) {
+
+				& {
+					top: -12px;
+				}
+			}
 		}
 
 	}
