--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -2912,13 +2912,18 @@ header {
 
 					tr {
 
-						&:nth-of-type(3),
-						&:nth-of-type(4),
-						&:nth-of-type(5) {
+						&:nth-of-type(odd) {
 
 							td {
 								background-color: @table-nth;
 							}
+						}
+
+						&:nth-of-type(3),
+						&:nth-of-type(4),
+						&:nth-of-type(5) {
+
+
 						}
 
 						&:last-child {
