--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -2912,19 +2912,18 @@ header {
 
 					tr {
 
-						&:nth-of-type(odd) {
+						&:nth-of-type(1),
+						&:nth-of-type(2),
+						&:nth-of-type(3),
+						&:nth-of-type(7),
+						&:nth-of-type(8),
+						&:nth-of-type(9), {
 
 							td {
 								background-color: @table-nth;
 							}
 						}
 
-						&:nth-of-type(3),
-						&:nth-of-type(4),
-						&:nth-of-type(5) {
-
-
-						}
 
 						&:last-child {
 
