distance learning page

--- a/src/css/parts/colors.less
+++ b/src/css/parts/colors.less
@@ -54,3 +54,10 @@
 @back-menu: #38414a;
 @back-submenu-mobile: #2c343c;
 @footer-sm: #35353a;
+@distance-means: #eee;
+@distance-title: #b4b4b4;
+@ico-distance: #282828;
+@name-line: #818181;
+@desc-color: #76787d;
+@dist-advantage: #f4f4f4;
+@advantage-item: #c1c1c1;
