--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -115,7 +115,7 @@ header {
 	.address-header {
 		margin-left: -29px;
 		padding-left: 35px;
-		background-image: url(../img/point.svg);
+		background-image:data-uri('image/svg+xml;charset=UTF-8', '../img/point.svg');
 		background-size: 24px 32px;
 		background-position: left top;
 		background-repeat: no-repeat;
@@ -1674,7 +1674,7 @@ header {
 
 						&::after {
 							background-color: @white;
-							background-image: url(../img/plus.svg);
+							background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/plus.svg');
 						}
 					}
 
@@ -1808,13 +1808,13 @@ header {
 			top: 0;
 			bottom: 0;
 			margin: auto;
-			background-image: url(../img/bg-scheme.svg);
+			background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/bg-scheme.svg');
 			background-position: 0 30%;
 			background-repeat: repeat-x;
 
 			@media (max-width: 767px) {
 
-				background-image: url(../img/bg-scheme-2.svg);
+				background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/bg-scheme-2.svg');
 				background-position: center;
 				background-repeat: repeat-y;
 			}
@@ -1993,6 +1993,8 @@ header {
 			color: @descript;
 		}
 	}
+
+	@import "distance-learning";
 
 	.gradient-line {
 		width: 100%;
@@ -2309,7 +2311,7 @@ header {
 
 					&::after {
 						background-color: @white;
-						background-image: url(../img/plus.svg);
+						background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/plus.svg');;
 					}
 				}
 
@@ -2429,7 +2431,7 @@ header {
 
 					&::after {
 						background-color: @white;
-						background-image: url(../img/plus.svg);
+						background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/plus.svg');;
 					}
 				}
 
@@ -2578,7 +2580,7 @@ header {
 					line-height: 36px;
 					font-weight: bold;
 					text-transform: uppercase;
-					background-image: url(../img/point.svg);
+					background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/point.svg');
 					background-size: 24px 32px;
 					background-position: left center;
 					background-repeat: no-repeat;
@@ -2589,7 +2591,7 @@ header {
 					font-size: 16px;
 					line-height: normal;
 					font-weight: 600;
-					background-image: url(../img/home-green.svg);
+					background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/home-green.svg');
 					background-size: 15px 14px;
 					background-repeat: no-repeat;
 					background-position: left center;
@@ -2603,7 +2605,7 @@ header {
 					line-height: normal;
 					font-weight: 600;
 					color: @phone-contact;
-					background-image: url(../img/phone-green.svg);
+					background-image:data-uri('image/svg+xml;charset=UTF-8', '../img/phone-green.svg');
 					background-size: 15px 14px;
 					background-repeat: no-repeat;
 					background-position: left center;
@@ -2617,7 +2619,7 @@ header {
 					line-height: normal;
 					font-weight: 600;
 					color: @phone-contact;
-					background-image: url(../img/mail.svg);
+					background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/mail.svg');
 					background-repeat: no-repeat;
 					background-position: left center;
 				}
@@ -2667,7 +2669,7 @@ header {
 					font-size: 13px;
 					font-weight: 600;
 					color: @color-date;
-					background-image: url(../img/calendar.svg);
+					background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/calendar.svg');
 					background-size: 15px 15px;
 					background-position: left center;
 					background-repeat: no-repeat;
@@ -3069,7 +3071,7 @@ header {
 			margin-bottom: 15px;
 			font-size: 16px;
 			padding-left: 68px;
-			background-image: url(../img/pdf.svg);
+			background-image: data-uri('image/svg+xml;charset=UTF-8', '../img/pdf.svg');
 			background-size: 48px 50px;
 			background-position: left center;
 			background-repeat: no-repeat;
