header phones refactoring

--- a/src/templates/includes/header.jade
+++ b/src/templates/includes/header.jade
@@ -19,14 +19,17 @@ mixin header()
                   span.address ул. Сенько, 24а
                   p.phone  +7(4752)
                      span  44-99-00
-                  p.title: a(href="javascript:void(0)")  Все филиалы
+                  span.address ул. Коммунальная, 18
+                  p.phone  8(900)
+                     span  510-88-89
+                  //-p.title: a(href="javascript:void(0)")  Все филиалы
             .col-md-3
                .address-header.mich
                   p.title  Центральный офис в Мичуринске
                   span.address ул. Полтавская, 55
                   p.phone  +7(4752)
                      span  44-99-00
-                  p.title: a(href="javascript:void(0)")  Все филиалы
+                  //-p.title: a(href="javascript:void(0)")  Все филиалы
             .col-md-2.reserv-block
                a(href="javascript:void(0)").reservation.js-view-popup
                   +svg('car')
