--- a/src/css/parts/main.less
+++ b/src/css/parts/main.less
@@ -145,7 +145,7 @@ header {
 
 			&.title {
 				margin-bottom: 7px;
-				font-size: 17px;
+				font-size: 14px;
 				line-height: 20px;
 				font-weight: bold;
 				text-transform: uppercase;
@@ -175,11 +175,11 @@ header {
 			}
 
 			&.phone {
-				margin-top: 6px;
-				font-size: 24px;
+				margin-top: -4px;
+				font-size: 18px;
 				color: @green;
 
-				@media (min-width: 768px) and (max-width: 1199px) {
+				/*@media (min-width: 768px) and (max-width: 1199px) {
 
 					&  {
 						font-size: 16px;
@@ -192,7 +192,7 @@ header {
 						margin-top: 2px;
 						font-size: 15px;
 					}
-				}
+				}*/
 
 				span {
 					color: @toxic;
@@ -204,7 +204,7 @@ header {
 		span {
 
 			&.address {
-				font-size: 17px;
+				font-size: 14px;
 				font-weight: 600;
 				color: @gray;
 
@@ -213,6 +213,11 @@ header {
 					&  {
 						font-size: 14px;
 					}
+				}
+
+				&:nth-of-type(2) {
+					margin-top: 6px;
+					display: block;
 				}
 			}
 		}
